[gd_scene load_steps=7 format=3 uid="uid://dv5fp6oyc2pun"]

[ext_resource type="Script" path="res://mp_test.gd" id="1_3jwa8"]
[ext_resource type="Material" uid="uid://du1earkxy28p3" path="res://Ground.tres" id="2_7euaa"]
[ext_resource type="PackedScene" uid="uid://ljy8fmba8t80" path="res://ball.tscn" id="3_s884p"]
[ext_resource type="PackedScene" uid="uid://baf15220grttu" path="res://car_parts/tank.tscn" id="4_fv1x3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xab1b"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_xwlpp"]
size = Vector3(100, 1, 100)

[node name="MPTest" type="Node"]
script = ExtResource("1_3jwa8")

[node name="MPUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MPUI"]
layout_mode = 2
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MPUI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MPUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Remote:"

[node name="Button" type="Button" parent="MPUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Button2" type="Button" parent="MPUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="LineEdit" type="LineEdit" parent="MPUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[node name="Level" type="Node" parent="."]

[node name="World" type="Node3D" parent="Level"]

[node name="Camera3D" type="Camera3D" parent="Level/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.15836, 4.05735)

[node name="StaticBody3D" type="StaticBody3D" parent="Level/World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/World/StaticBody3D"]
shape = SubResource("BoxShape3D_xab1b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/World/StaticBody3D"]
material_override = ExtResource("2_7euaa")
mesh = SubResource("BoxMesh_xwlpp")

[node name="Objects" type="Node3D" parent="Level/World"]

[node name="Ball1" parent="Level/World/Objects" instance=ExtResource("3_s884p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.40455, 2.49846, -2.25076)

[node name="Ball2" parent="Level/World/Objects" instance=ExtResource("3_s884p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.23597, 3.44425, -2.40477)

[node name="VehicleBody3D" parent="Level/World/Objects" instance=ExtResource("4_fv1x3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.04756, -7.87845)

[node name="OmniLight3D" type="OmniLight3D" parent="Level/World"]
transform = Transform3D(0.3379, 0, 0.941182, 0, 1, 0, -0.941182, 0, 0.3379, 0, 7.06952, -0.880362)
light_energy = 7.061
omni_range = 10.177

[connection signal="emit_drive" from="." to="Level/World/Objects/VehicleBody3D" method="set_drive_command"]
[connection signal="pressed" from="MPUI/VBoxContainer/HBoxContainer/Button" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MPUI/VBoxContainer/HBoxContainer/Button2" to="." method="_on_connect_pressed"]
